--- a/src/Common/Cart/Cart.module.css
+++ b/src/Common/Cart/Cart.module.css
@@ -3,8 +3,9 @@
     grid-template-areas:
     'header'
     'maincontent';
-grid-template-rows: auto auto ;
+    grid-template-rows: auto auto ;
 }
+
 .header {
     grid-area: header;
     display: flex;
@@ -21,24 +22,25 @@ grid-template-rows: auto auto ;
     text-align: center;
 }
 
-.Content{
-    grid-area: maincontent;
-    
+.content{
+    grid-area: maincontent;  
 }
+
 .mainContent{
     display: grid;
     grid-template-areas:
     'mainContentUp'
     'mainContentDown';
-grid-template-rows: auto auto ;
+    grid-template-rows: auto auto ;
 }
+
 .product{
     grid-area: mainContentUp;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    
+    justify-content: center; 
 }
+
 .component img {
     width: 100%;
     height: 100%;
@@ -52,30 +54,32 @@ grid-template-rows: auto auto ;
 .component img:hover {
     transform: scale(1.05);
 }
+
 .image{
     overflow: hidden;
     max-width: 285px;
-    max-height: 350px;
-    
+    max-height: 350px;  
 }
+
 .component {
     max-width: 285px;
     max-height: 350px;
     margin:10px 20px 245px;
     justify-content: center;
-    align-items: center;
-    
+    align-items: center;   
 }
+
 .productId{
-      display: flex;
+    display: flex;
     justify-content: center;
     text-align: center;
     margin: 20px 3px 20px;
     font-family: 'Montserrat', sans-serif;
-     font-size: 19px;
-     font-weight: 540;
-     height: 40px;
+    font-size: 19px;
+    font-weight: 540;
+    height: 40px;
 }
+
 .stripe{
     grid-area: mainContentDown;
     display: flex;
@@ -105,7 +109,6 @@ grid-template-rows: auto auto ;
     align-items: center;
     text-align: center;
     font-size: 20px;
-    
 }
 
 .removeFromCart{
@@ -115,6 +118,7 @@ grid-template-rows: auto auto ;
     background-color: red;
     color: white;
 }
+
 a{
     color: black;
     text-decoration: none;
@@ -138,6 +142,7 @@ a:hover{
     color: #bf1650;
     background-color: rgb(230, 230, 230);
 }
+
 .chosenSize{
     display: flex;
     justify-content: center;
@@ -145,7 +150,6 @@ a:hover{
     font-size: 18px;
     font-weight: 400;
 }
-
 
 .price{
     display: flex;
@@ -156,6 +160,12 @@ a:hover{
     margin-top: 12px;
 }
 
+.noProductButton{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
 .noProduct {
     grid-area: maincontent;
 }
@@ -164,12 +174,6 @@ text-align: center;
 font-size: 20px;
 margin: 30px;
 }
-.noProductButton{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-
 .noProduct span button{
     display: flex;
     margin: 0 auto;
@@ -185,9 +189,9 @@ margin: 30px;
     transition: transform .25s;
     font-family: 'Montserrat', sans-serif;
     
-  }
-  .noProduct span button:before,
-  .noProduct span button:after{
+}
+.noProduct span button:before,
+.noProduct span button:after{
     position: absolute;
     content: "ПЕРЕЙТИ В КАТАЛОГ";
     height: 85px;
@@ -200,30 +204,29 @@ margin: 30px;
     box-sizing: border-box;
     border-radius: 5px;
     
-  }
-  .noProduct span button:before{
+}
+.noProduct span button:before{
     color: #fff;
     background: #000;
     transform: rotateY(0deg) translateZ(25px);
-  }
-  .noProduct span button:after{
+}
+.noProduct span button:after{
     color: #000;
     transform: rotateX(90deg) translateZ(25px);
-  }
-  .noProduct span button:hover{
-      
+}
+.noProduct span button:hover{   
     transform: translateZ(-25px) rotateX(-90deg);
-  }
-  
-  
+}
+
 .favorites{
     justify-content: center;
     align-items: center;
     width: 30px;
     height: 30px;
     display: flex;
-     margin: -420px 240px 400px;
+    margin: -420px 240px 400px;
 }
+
 .favorite{
     z-index: 1;
     justify-content: center;
@@ -247,7 +250,6 @@ margin: 30px;
     z-index: 1;
 }
 
-
 @media screen and (max-width: 500px) {
     .noProduct span button{
         display: flex;
@@ -264,9 +266,9 @@ margin: 30px;
         transition: transform .25s;
         font-family: 'Montserrat', sans-serif;
         
-      }
-      .noProduct span button:before,
-      .noProduct span button:after{
+    }
+    .noProduct span button:before,
+    .noProduct span button:after{
         position: absolute;
         content: "ПЕРЕЙТИ В КАТАЛОГ";
         height: 70px;
@@ -279,24 +281,27 @@ margin: 30px;
         box-sizing: border-box;
         border-radius: 5px;
         
-      }
+    }
     .noProductButton span button{
         font-size: 14px;
-      }
-      .favoritesandCart{
+    }
+    .favoritesandCart{
         display: block;
-      }
-      .favoritesandCart button{
+    }
+    .favoritesandCart button{
         margin: 10px auto;
-      }
+    }
+
     .component {
         max-width: 260px;
         max-height: 330px;    
     }
+
     .image{
         max-width: 260px;
         max-height: 330px;    
     }
+
     .increase p{
         font-size: 24px;
         margin-top:-7px;
@@ -312,34 +317,39 @@ margin: 30px;
         text-align: center;
         font-size: 18px;
     }
+    
     .productId{
-      margin: 20px 3px 8px;
-  }
-  .favorites{
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
-    display: flex;
-     margin: -385px 215px 375px;
-}
-.chosenSize{
-    font-size: 16px;
-  }
-  .header {
-    margin:20px 0px 0px;
-}
-.header h3{
-    font-size: 20px;
-    margin: 70px 0 20px;
-}
-.increase{
-    margin-bottom: 200px;
-}
-.stripe{
-    margin-top: 5px;
-}
+        margin: 20px 3px 8px;
+    }
 
-  }
+    .favorites{
+        justify-content: center;
+        align-items: center;
+        width: 30px;
+        height: 30px;
+        display: flex;
+        margin: -385px 215px 375px;
+    }
+
+    .chosenSize{
+        font-size: 16px;
+    }
+
+    .header {
+        margin:20px 0px 0px;
+    }
+    .header h3{
+        font-size: 20px;
+        margin: 70px 0 20px;
+    }
+
+    .increase{
+        margin-bottom: 200px;
+    }
+
+    .stripe{
+        margin-top: 5px;
+    }
+}
 
 
