--- a/src/Common/Favorites/Favorites.module.css
+++ b/src/Common/Favorites/Favorites.module.css
@@ -3,8 +3,9 @@
     grid-template-areas:
     'header'
     'maincontent';
-grid-template-rows: auto auto ;
+    grid-template-rows: auto auto ;
 }
+
 .header {
     grid-area: header;
     display: flex;
@@ -21,24 +22,25 @@ grid-template-rows: auto auto ;
     text-align: center;
 }
 
-.Content{
-    grid-area: maincontent;
-    
+.content{
+    grid-area: maincontent;  
 }
+
 .mainContent{
     display: grid;
     grid-template-areas:
     'mainContentUp'
     'mainContentDown';
-grid-template-rows: auto auto ;
+    grid-template-rows: auto auto ;
 }
+
 .product{
     grid-area: mainContentUp;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    
 }
+
 .component img {
     width: 100%;
     height: 100%;
@@ -52,29 +54,31 @@ grid-template-rows: auto auto ;
 .component img:hover {
     transform: scale(1.05);
 }
+
 .image{
     overflow: hidden;
     max-width: 285px;
-    max-height: 350px;
-    
+    max-height: 350px;   
 }
+
 .component {
     max-width: 285px;
     margin:  0px 50px 0px;
     justify-content: center;
-    align-items: center;
-    
+    align-items: center;  
 }
+
 .productId{
-      display: flex;
+    display: flex;
     justify-content: center;
     text-align: center;
     margin: 20px 3px 20px;
     font-family: 'Montserrat', sans-serif;
-     font-size: 19px;
-     font-weight: 540;
-     height: 40px;
+    font-size: 19px;
+    font-weight: 540;
+    height: 40px;
 }
+
 .stripe{
     grid-area: mainContentDown;
     display: flex;
@@ -83,15 +87,12 @@ grid-template-rows: auto auto ;
     margin-top: 70px;
 }
 
-
-
 .increase{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    
+    text-align: center;   
 }
 .increase span{
     font-size: 20px;
@@ -112,6 +113,7 @@ grid-template-rows: auto auto ;
     background-color: red;
     color: white;
 }
+
 a{
     color: black;
     text-decoration: none;
@@ -120,7 +122,6 @@ a:hover{
     color: #bf1650;
     text-decoration: none;
 }
-
 
 .size{
     display: flex;
@@ -144,7 +145,6 @@ a:hover{
     font-weight: 400;
 }
 
-
 .price{
     display: flex;
     justify-content: center;
@@ -153,6 +153,7 @@ a:hover{
     font-weight: 400;
     margin-top: 12px;
 }
+
 .favoritesandCart{
   display: flex;
   flex-direction: row;
@@ -216,7 +217,6 @@ margin: 30px;
   transform: translateZ(-25px) rotateX(-90deg);
 }
 
-
 .removeFromFavorites span button{
     display: flex;
     justify-content: center;
@@ -232,7 +232,7 @@ margin: 30px;
     transition: transform .25s;
     font-family: 'Montserrat', sans-serif;
     
-  }
+}
 .removeFromFavorites span button:before,
 .removeFromFavorites span button:after{
     content: "ОЧИСТИТЬ ИЗБРАННОЕ";
@@ -244,23 +244,21 @@ margin: 30px;
     border: 3px solid black;
     box-sizing: border-box;
     border-radius: 5px;
-  }
+}
 .removeFromFavorites span button:before{
     color: #fff;
     background: #000;
     transform: rotateY(0deg) translateZ(25px);
-  }
-  .removeFromFavorites span button:after{
+}
+.removeFromFavorites span button:after{
     color: #000;
     transform: rotateX(90deg) translateZ(25px);
-  }
+}
   .removeFromFavorites span button:hover{
       
     transform: translateZ(-25px) rotateX(-90deg);
-  }
+}
 
-
-  
 .addToCart span button{
     display: flex;
     justify-content: center;
@@ -276,7 +274,7 @@ margin: 30px;
     transition: transform .25s;
     font-family: 'Montserrat', sans-serif;
     
-  }
+}
 .addToCart span button:before,
 .addToCart span button:after{
     content: "ДОБАВИТЬ В КОРЗИНУ";
@@ -288,30 +286,31 @@ margin: 30px;
     border: 3px solid black;
     box-sizing: border-box;
     border-radius: 5px;
-  }
+}
 .addToCart span button:before{
     color: #fff;
     background: #000;
     transform: rotateY(0deg) translateZ(25px);
-  }
-  .addToCart span button:after{
+}
+.addToCart span button:after{
     color: #000;
     transform: rotateX(90deg) translateZ(25px);
-  }
-  .addToCart span button:hover{
+}
+.addToCart span button:hover{
       
     transform: translateZ(-25px) rotateX(-90deg);
-  }
-  @media screen and (max-width: 800px) {
-    .component {
-      max-width: 285px;
-      margin:  0px 50px 40px;
-      justify-content: center;
-      align-items: center; 
-  }
-  }
+}
 
-  @media screen and (max-width: 500px) {
+@media screen and (max-width: 800px) {
+  .component {
+    max-width: 285px;
+    margin:  0px 50px 40px;
+    justify-content: center;
+    align-items: center; 
+  }
+}
+
+@media screen and (max-width: 500px) {
     .noProduct span button{
       display: flex;
       margin: 0 auto;
@@ -345,44 +344,44 @@ margin: 30px;
     }
     .noProductButton span button{
         font-size: 14px;
-      }
-      .favoritesandCart{
-        display: block;
-        margin: -20px;
-      }
-      .favoritesandCart button{
-        position: relative;
-        left: 21%;
-      }
-      .header {
-        margin:20px 0px 0px;
+    }
+
+    .favoritesandCart{
+      display: block;
+      margin: -20px;
+    }
+    .favoritesandCart button{
+      position: relative;
+      left: 21%;
+    }
+
+    .header {
+      margin:20px 0px 0px;
     }
     .header h3{
       font-size: 20px;
       margin: 70px 0 20px;
-  }
+    }
+
     .image{
       max-width: 260px;
       max-height: 330px;    
-  }
-  .component {
-    margin:  0px 10px 40px; 
-}
-.chosenSize{
-  font-size: 16px;
-}
+    }
 
-    
-  }
-  @media screen and (max-width: 400px) {
-    
-      .favoritesandCart button{
-        position: relative;
-        left: 23%;
-      }
-   
-    
-  }
+    .component {
+      margin:  0px 10px 40px; 
+    }
+
+    .chosenSize{
+      font-size: 16px;
+    }   
+}
+@media screen and (max-width: 400px) {
+  .favoritesandCart button{
+    position: relative;
+    left: 23%;
+  } 
+}
 
 
 
